Fixed in svn version:
   * Minor bug in ESM implementation

New in 5.1 version:

   * "Cold restart" for Car-Parrinello dynamics
   * Calling QE from external codes made easier: see new subdirectory COUPLE
   * PW: Hybrid functionals for USPP and PAW (experimental)
   * PW: partial support to the use of k-point labels in the Brillouin zone
   * PW: Langevin dynamics with Smart Monte Carlo
   * CP and PW: Tkatchenko-Scheffler vdW correction (experimental)
   * GWW replaced by GWL (using Lanczos chains)
   * turboTDDFT: pseudo_Hermitian Lanczos algorithm and 
     Davidson-like diagonalization added
   * PWCOND with DFT+U
   * New functionals: gau-pbe, PW86 (unrevised), B86B, XDM (exchange-hole 
     dipole moment) model of dispersions, vdW-DF3, vdW-DF4 (Klimes et al),
     rVV10, optB86b-vdW, rev-vdW-DF2 
   * PHonon: Calculation of phonon dispersions using the finite displacements 
     supercell approach. See subdirectory FD/ in PHonon.
   * dynmat.x can calculate phonon contribution to dielectric tensor
   * turboTDDFT now supports hybrid functionals (only with norm-conserving
     pseudopotentials)
   * "image" parallelization re-introduced in pw.x: see code "manypw.x"

Incompatible changes in 5.1 version:

   * Initialization of MPI modified in order to simplify usage of QE routines
     from external codes. It is now possible to run an instance of QE into a
     mpi communicator passed by the external routine. Changes affect a few MPI
     initialization routines (e.g. mp_start) and some MPI related modules;
     the communicator must be explicitly specified when calling mp_* interfaces
     to low-level MPI libraries.
   * Input variable "london" should be replaced by " vdw_corr='Grimme-D2' "
   * Routine "electrons" doesn't deal any longer with non-scf cases;
     use routine "non_scf" instead. For hybrid functionals, the loops over
     the charge density and over the exchange potential have been separated.